<resources>
    <string name="app_name">Cel-Far</string>
    <string name="intro">Hello, you can use this application to check your skills on tempreature conversion, or calculate the correct value.</string>
    <string name="check">Check</string>
    <string name="calculate">Calculate</string>
    <string name="far">Farenhit</string>
    <string name="cel">Celcius</string>
    <string name="go">Go!</string>
    <string name="title_cala_activity_a">Converter Screen</string>
    <string name="back">Return</string>
    <string name="none">None</string>
    <string name="full">Full</string>
    <string name="closing">Closing the app</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="catchMyDialog">Hosting activity must implement the interface ResultListener</string>
    <string name="precisinTitle">Set the numbers Precision</string>
    <string name="okey">Okey</string>
    <string name="cancel">Cancel</string>
</resources>
