<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.adrian_2.ex8.MainActivity">


    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/intro"
        android:id="@+id/tvIntro"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:id="@+id/ivLogo"
        android:layout_alignParentEnd="true"
        android:src="@drawable/logo"/>

    <RadioGroup
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_alignBottom="@+id/tvIntro"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:id="@+id/rbCheck"
            android:layout_marginLeft="50dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/rbCalculate"
            android:layout_marginLeft="70dp"/>
    </RadioGroup>

    <EditText
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etCel"
        android:layout_width="100dp"
        android:layout_alignTop="@+id/bGo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"
        android:enabled="false"/>

    <EditText
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="85dp"
        android:id="@+id/etFar"
        android:layout_width="100dp"
        android:layout_below="@+id/tvIntro"
        android:layout_toStartOf="@+id/bGo"
        android:enabled="false"/>

    <Button
        android:text="@string/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bGo"
        android:layout_alignBaseline="@+id/etFar"
        android:layout_alignBottom="@+id/etFar"
        android:layout_toStartOf="@+id/etCel"
        android:enabled="false"/>

    <TextView
        android:text="@string/far"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCel"
        android:layout_toStartOf="@+id/bGo"
        android:layout_marginEnd="14dp"
        android:id="@+id/tvFar" />

    <TextView
        android:text="@string/cel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCel"
        android:layout_alignEnd="@+id/tvIntro"
        android:id="@+id/tvCel" />

</RelativeLayout>
